Add semantic description to CategoryChart for accessibility
Introduced ChartDataSemanticConverter to generate semantic descriptions for the CategoryChart control, improving accessibility. Updated CategoryChart.xaml to use the new converter for the SemanticProperties.Description property.

--- a/10.0/Apps/DeveloperBalance/Pages/Controls/CategoryChart.xaml
+++ b/10.0/Apps/DeveloperBalance/Pages/Controls/CategoryChart.xaml
@@ -6,6 +6,7 @@
         xmlns:shimmer="clr-namespace:Syncfusion.Maui.Toolkit.Shimmer;assembly=Syncfusion.Maui.Toolkit"
         xmlns:pageModels="clr-namespace:DeveloperBalance.PageModels"
         x:Class="DeveloperBalance.Pages.Controls.CategoryChart"
+        SemanticProperties.Description="{Binding TodoCategoryData, Converter={controls:ChartDataSemanticConverter}}"
         HeightRequest="{OnIdiom 300, Phone=200}"
         x:DataType="pageModels:MainPageModel"
         Style="{StaticResource CardStyle}">
